--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+## Use this to see if there are any tracked files that are ignored
+# git ls-files -i --exclude-standard
+
 .settings
 *.swp
 target/
