--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
       <!-- GWT needs at least java 1.6 -->
       <maven.compiler.source>1.6</maven.compiler.source>
       <maven.compiler.target>1.6</maven.compiler.target>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
