--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <!-- POM file generated with GWT webAppCreator -->
   <modelVersion>4.0.0</modelVersion>
@@ -9,15 +9,23 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>org.grickle.jsondto</name>
-  
+
   <properties>
-      <!-- Convenience property to set the GWT version -->
-      <gwtVersion>2.2.0</gwtVersion>
-      <!-- GWT needs at least java 1.6 -->
-      <maven.compiler.source>1.6</maven.compiler.source>
-      <maven.compiler.target>1.6</maven.compiler.target>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Convenience property to set the GWT version -->
+    <gwtVersion>2.2.0</gwtVersion>
+    <!-- GWT needs at least java 1.6 -->
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>codehaus-release-repo</id>
+      <name>Codehaus Release Repo</name>
+      <url>http://repository.codehaus.org</url>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -45,18 +53,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
-    <!-- Generate compiled stuff in the folder used for developing mode --> 
+    <!-- Generate compiled stuff in the folder used for developing mode -->
     <outputDirectory>target/www/WEB-INF/classes</outputDirectory>
-    
+
     <plugins>
-      
-      <!-- GWT Maven Plugin-->
+
+      <!-- GWT Maven Plugin -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <!-- JS is only needed in the package phase, this speeds up testing --> 
+        <!-- JS is only needed in the package phase, this speeds up testing -->
         <executions>
           <execution>
             <phase>prepare-package</phase>
@@ -65,8 +73,8 @@
             </goals>
           </execution>
         </executions>
-        <!-- Plugin configuration. There are many available options, 
-             see gwt-maven-plugin documentation at codehaus.org --> 
+        <!-- Plugin configuration. There are many available options, see 
+          gwt-maven-plugin documentation at codehaus.org -->
         <configuration>
           <!-- URL that should be automatically opened in the GWT shell (gwt:run). -->
           <runTarget>jsondto.html</runTarget>
@@ -77,7 +85,8 @@
         </configuration>
       </plugin>
 
-      <!-- Add source folders to test classpath in order to run gwt-tests as normal junit-tests -->
+      <!-- Add source folders to test classpath in order to run gwt-tests 
+        as normal junit-tests -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
@@ -88,7 +97,7 @@
           <useManifestOnlyJar>false</useManifestOnlyJar>
           <forkMode>always</forkMode>
 
-          <!-- Folder for generated testing stuff --> 
+          <!-- Folder for generated testing stuff -->
           <systemProperties>
             <property>
               <name>gwt.args</name>
@@ -97,7 +106,7 @@
           </systemProperties>
         </configuration>
       </plugin>
-      
+
       <!-- Copy static web files before executing gwt:run -->
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
@@ -124,15 +133,25 @@
         <artifactId>maven-clean-plugin</artifactId>
         <configuration>
           <filesets>
-            <fileset><directory>src/main/webapp/jsondto</directory></fileset>
-            <fileset><directory>src/main/webapp/WEB-INF/classes</directory></fileset>
-            <fileset><directory>tomcat</directory></fileset>
-            <fileset><directory>www-test</directory></fileset>
-            <fileset><directory>.gwt-tmp</directory></fileset>
+            <fileset>
+              <directory>src/main/webapp/jsondto</directory>
+            </fileset>
+            <fileset>
+              <directory>src/main/webapp/WEB-INF/classes</directory>
+            </fileset>
+            <fileset>
+              <directory>tomcat</directory>
+            </fileset>
+            <fileset>
+              <directory>www-test</directory>
+            </fileset>
+            <fileset>
+              <directory>.gwt-tmp</directory>
+            </fileset>
           </filesets>
         </configuration>
       </plugin>
-      
+
     </plugins>
 
     <!-- include source in package -->
