GWT version bump, m2e bump

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ target/
 war/
 src/test/webapp/WEB-INF/deploy/
 src/test/webapp/jsondto/
+/target
+/target
+/target
+/target
+/target
+/target
+/target
+/target
