POST_URLENCODED support

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
       <version>${gwtVersion}</version>
-      <scope>compile</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -64,6 +64,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
+        <version>${gwtVersion}</version>
         <!-- JS is only needed in the package phase, this speeds up testing -->
         <executions>
           <execution>
